# tor-army

./: .gitignore  LICENSE  README.md  generate_id_lists.py  parser_template.py  parsers.py  pyproject.toml  tor_army.py
.github/workflows/: ci.yml
examples/: README.md  item_sample.json  npc_sample.json  quest_sample.json
tests/: conftest.py  test_parsers.py
