[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tor-army"
version = "3.1.0"
description = "Massively parallel async web scraper using Tor for IP diversity and browser TLS fingerprint impersonation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "VoxCore84" }]
keywords = ["scraper", "tor", "async", "wowhead", "web-scraping", "cloudflare-bypass"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "curl-cffi>=0.7",
    "stem>=1.8",
]

[project.scripts]
tor-army = "tor_army:main"

[project.urls]
Homepage = "https://github.com/VoxCore84/tor-army"
Issues = "https://github.com/VoxCore84/tor-army/issues"
