[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tor-army"
version = "3.2.0"
description = "Massively parallel async web scraper using Tor for IP diversity and browser TLS fingerprint impersonation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "VoxCore84" }]
keywords = ["scraper", "tor", "async", "wowhead", "web-scraping", "cloudflare-bypass"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "curl-cffi>=0.7",
    "stem>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
py-modules = ["tor_army", "parsers", "generate_id_lists"]

[project.scripts]
tor-army = "tor_army:main"

[project.urls]
Homepage = "https://github.com/VoxCore84/tor-army"
Issues = "https://github.com/VoxCore84/tor-army/issues"
